test/cli/test/images/all-attestor/kyverno-test.yaml
name: test-image-any-attestor
policies:
  - policies.yaml
resources:
  - resources.yaml
results:
  - policy: multiple-key-all
    rule: check-signature
    resource: signed
    kind: Pod
    status: pass
  - policy: multiple-key-all
    rule: check-signature
    resource: unsigned
    kind: Pod
    status: fail
